# kaizenmind-ai

./: .gitignore  Readme.md
docs/: plan.md
products/ai-agent-unit-test-and-review/: docker-compose.secops.yml  docker-compose.yml  ✅_full_ai_agent_app_codebase_understanding_test_generation_isolated_execution_streamlit_fast_api_docker.md
products/ai-agent-unit-test-and-review/orchestration_service/: requirements.txt
products/sentinel/: Readme.md  final_report.json  final_report.md
products/sentinel/app/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
products/sentinel/app/reports/: final_report.json  final_report.md
products/sentinel/app/scripts/: run_dexter.sh
products/sentinel/app/src/pentestai/: cli.py  config.py  controllers.py  main.py
products/sentinel/app/src/pentestai/agents/: personas.py
products/sentinel/app/src/pentestai/langgraph_graphs/: __init__.py  external_langgraph_agent.py  hybrid_review_graph.py  review_graph.py
products/sentinel/app/src/pentestai/models/: persona_results.py
products/sentinel/app/src/pentestai/report/: generator.py
products/sentinel/app/src/pentestai/tools/: emulator.py  ghidra.py  llm_adapter.py  ollama_test.py  pentest_tools.py  repo_fetch.py  static_analyzers.py  subproc.py  test_runner.py
products/sentinel/app/src/pentestai/tools/adapters/: code_quality_toolkit.py  pentest_toolkit.py  security_toolkit.py  test_toolkit.py
products/sentinel/app/src/pentestai/utils/: file_store.py  security.py
products/sentinel/app/ui/: README.md  streamlit_app.py
(+34 files in other folders)
